--- a/index.html
+++ b/index.html
@@ -93,6 +93,14 @@
 
     <script src="js/plugins.js"></script>
     <script src="js/script.js"></script>
+
+    <script>
+      var _gaq=[['_setAccount','UA-34626064-1'],['_trackPageview']];
+      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+      s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
+
     <!-- end scripts-->
 
   </body>
