Added new download (1.0.0)

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           Releases
         </h2>
         <div class="well well-small">
+          <p>07/09/2012 - <a href="https://github.com/downloads/seadog/traktr/traktr-1.0.0.zip">1.0.0</a></p>
           <p>05/09/2012 - <a href="https://github.com/downloads/seadog/traktr/traktr-1.0.0-rc1.zip">1.0.0-rc1</a></p>
         </div>
       </div>
