Updated website for new repo name

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </style>
   </head>
   <body>
-    <a href="https://github.com/seadog/traktr"><img style="position: absolute; top: 40px; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/seadog/script.traktr"><img style="position: absolute; top: 40px; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
@@ -39,9 +39,9 @@
           <a class="brand" href="#">Traktr</a>
           <ul class="nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="https://github.com/seadog/traktr/downloads">Downloads</a></li>
-            <li><a href="https://github.com/seadog/traktr/tree/develop">Code</a></li>
-            <li><a href="https://github.com/seadog/traktr/issues/">Bugs</a></li>
+            <li><a href="https://github.com/seadog/script.traktr/downloads">Downloads</a></li>
+            <li><a href="https://github.com/seadog/script.traktr/tree/develop">Code</a></li>
+            <li><a href="https://github.com/seadog/script.traktr/issues/">Bugs</a></li>
           </ul>
         </div>
       </div>
@@ -70,11 +70,17 @@
         </div>
 
         <h2>
-          Releases
+          XBMC Repository
         </h2>
         <div class="well well-small">
-          <p>07/09/2012 - <a href="https://github.com/downloads/seadog/traktr/traktr-1.0.0.zip">1.0.0</a></p>
-          <p>05/09/2012 - <a href="https://github.com/downloads/seadog/traktr/traktr-1.0.0-rc1.zip">1.0.0-rc1</a></p>
+          <p>08/09/2012 - <a href="https://github.com/downloads/seadog/script.traktr/xbmc.repo.traktr-1.0.0.zip">1.0.0</a> - Keeps the addon updated and makes installing it easy</p>
+        </div>
+
+        <h2>
+          Stand Alone Releases
+        </h2>
+        <div class="well well-small">
+          <p>07/09/2012 - <a href="https://github.com/downloads/seadog/script.traktr/script.traktr-1.0.0.zip">1.0.0</a></p>
         </div>
       </div>
 
