Added trello link

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li><a href="https://github.com/seadog/script.traktr/downloads">Downloads</a></li>
             <li><a href="https://github.com/seadog/script.traktr/tree/develop">Code</a></li>
             <li><a href="https://github.com/seadog/script.traktr/issues/">Bugs</a></li>
+            <li><a href="https://trello.com/board/traktr/504e0499317919226db311b7">What I'm Working On</a></li>
           </ul>
         </div>
       </div>
