--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
           XBMC Repository
         </h2>
         <div class="well well-small">
-          <p>11/09/2012 - <a href="http://www.igningokt.co.uk/script.traktr/repo/xbmc.repo.traktr-1.0.1.zip">1.0.1</a> - Keeps the addon updated and makes installing it easy</p>
+          <p>11/09/2012 - <a href="http://www.ignignokt.co.uk/script.traktr/repo/xbmc.repo.traktr-1.0.1.zip">1.0.1</a> - Keeps the addon updated and makes installing it easy</p>
         </div>
 
         <h2>
           Stand Alone Releases
         </h2>
         <div class="well well-small">
-          <p>07/09/2012 - <a href="https://www.ignignokt.co.uk/script.traktr/repo/script.traktr/script.traktr-1.0.0.zip">1.0.0</a></p>
+          <p>07/09/2012 - <a href="http://www.ignignokt.co.uk/script.traktr/repo/script.traktr/script.traktr-1.0.0.zip">1.0.0</a></p>
         </div>
       </div>
 
