--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
           Stand Alone Releases
         </h2>
         <div class="well well-small">
-          <p>07/09/2012 - <a href="https://github.com/downloads/seadog/script.traktr/script.traktr-1.0.0.zip">1.0.0</a></p>
+          <p>05/10/2012 - <a href="http://ignignokt.co.uk/script.traktr/repo/script.traktr/script.traktr-1.0.1.zip">1.0.1</a></p>
+          <p>07/09/2012 - <a href="http://ignignokt.co.uk/script.traktr/repo/script.traktr/script.traktr-1.0.0.zip">1.0.0</a></p>
         </div>
       </div>
 
