New website blurb

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         <p>
           Traktr is my fork of <a href="https://github.com/Manromen/script.traktutilities">script.traktutilities</a> for xbmc, it enables you to sync your xbmc collection with your trakt.tv library, allowing play counts and collection status to be kept up to date. It also scrobbles played TV and movies and allows played items to be rated on trakt from within XBMC.
         </p>
+        <p>
+          <a href="repo/script.traktr/changelog.txt">Changelog</a>
+        </p>
         <h2>
           Main Features
         </h2>
@@ -81,6 +84,8 @@
           Stand Alone Releases
         </h2>
         <div class="well well-small">
+          <p>03/12/2012 - <a href="http://ignignokt.co.uk/script.traktr/repo/script.traktr/script.traktr-1.0.3.zip">1.0.3</a></p>
+          <p>03/12/2012 - <a href="http://ignignokt.co.uk/script.traktr/repo/script.traktr/script.traktr-1.0.2.zip">1.0.2</a></p>
           <p>05/10/2012 - <a href="http://ignignokt.co.uk/script.traktr/repo/script.traktr/script.traktr-1.0.1.zip">1.0.1</a></p>
           <p>07/09/2012 - <a href="http://ignignokt.co.uk/script.traktr/repo/script.traktr/script.traktr-1.0.0.zip">1.0.0</a></p>
         </div>
